[package]
name = "native-mutual-assurance"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.0"
solana-program = "1.18.13"
thiserror = "1.0.61"
num-traits = "0.2.19"
num-derive = "0.4.2"

[dev-dependencies]
solana-program-test = "1.18.13"
solana-sdk = "1.18.13"
